Fixing card count alignment bug

--- a/scss/injected/workPoints.scss
+++ b/scss/injected/workPoints.scss
@@ -37,7 +37,7 @@
 
 	min-width: 100%;
 	margin: 10px 0 6px;
-	padding: 6px 0 6px 26px;
+	// padding: 0;
 
 	border-radius: 4px;
 
